# Quantum-GNSS

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: api.md  spec.md
notebooks/: 01_orbital_demo.ipynb  02_quantum_channel_demo.ipynb  03_spoof_simulation.ipynb  04_detection_demo.ipynb  05_end_to_end.ipynb  06_qtt_demo.ipynb
scripts/: generate_dataset.py  plot_roc.py  run_sim.py
src/quantum_gnss_guard/: __init__.py  detector.py  gnss_spoof.py  orbital.py  qtt.py  quantum_channel.py  simulator.py  utils.py
tests/: conftest.py  test_detector.py  test_orbital.py  test_qtt.py  test_quantum.py  test_spoof.py
